# fastrdp

./: .gitignore  LICENSE  README.md  _fastrdp.cpp  fastrdp.py  pyproject.toml  setup.py  test.py
fastrdp/: _core.cpp  core.py
