[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fastrdp"
description = "A native C++ implementation of the RDP algorithm for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chaitanya Lakhchaura" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["fastrdp"]
ext-modules = [
  {name="fastrdp._core", sources=["fastrdp/_core.cpp"], extra-compile-args=["-std=c++23"]},
]
